
[project]
name = "balena-python-hello-world"
version = "0.1.0"
description = "Sample Python project for Balena devices"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "flask>=3.1.2",
    "importlib-metadata>=8.7.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "werkzeug>=3.1.3",
    "zipp>=3.23.0",
]